--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	<button onclick="window.location.href='https://www.123pan.com/s/AX4cVv-5YYBH.html'">123云盘</button>
 	<button onclick="window.location.href='http://docs.tualatin.club/'">图拉丁入门手册</button>
 	<button onclick="window.location.href='https://csdiy.wiki/'">CS自学指南</button>
+	<button onclick="window.location.href='./Ubuntu_Tips.html'">Ubuntu Tips</button>
 	<!-- <button onclick="window.location.href='https://csdiy.wiki/'">CS自学指南</button>
-	<button onclick="window.location.href='https://csdiy.wiki/'">CS自学指南</button>
 	<button onclick="window.location.href='https://csdiy.wiki/'">CS自学指南</button> -->
 </body>
 </html>
