--- a/Ubuntu_Tips.html
+++ b/Ubuntu_Tips.html
@@ -54,14 +54,15 @@ sudo apt upgrade</code></pre>
         <p>Display CPU Usage, Netwotk Traffic, ... on the topbar</p>
     </div>
     <pre class="code-block">
-<code>sudo apt-get install gnome-tweak-tool gnome-shell-extensions</code>
+<code>sudo apt-get install gnome-shell-extension-manager</code>
 </pre>
 
     <div class="code-description">
         <p>Create a global static symbol link, so that when you call python, the system uses python3</p>
     </div>
     <pre class="code-block">
-<code>sudo ln -s /usr/bin/python3 /usr/bin/python</code>
+<code>sudo apt install python3 python3-pip python3-venv
+sudo ln -s /usr/bin/python3 /usr/bin/python</code>
 </pre>
 
 
