--- a/Ubuntu_Tips.html
+++ b/Ubuntu_Tips.html
@@ -65,6 +65,17 @@ sudo apt upgrade</code></pre>
 sudo ln -s /usr/bin/python3 /usr/bin/python</code>
 </pre>
 
+</pre>
+
+<div class="code-description">
+    <p>Python venv source/p>
+</div>
+<pre class="code-block">
+<code>pip config set global.index-url https://mirrors.geekpie.tech/pypi/web/simple/
+python -m venv VENVNAME
+source VENVNAME/bin/activate
+</code>
+</pre>
 
 
 </body>
